--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+  <!-- Primary Meta Tags -->
   <title>Lading Page</title>
+  <meta name="title" content="Landing Page 😁😁 | Huynh Truong">
+  <meta name="description" content="Create a project landing page for React beginner, .....">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://landing-page-home.vercel.app">
+  <meta property="og:title" content="Landing Page 😁😁 | Huynh Truong">
+  <meta property="og:description" content="Create a project landing page for React beginner, .....">
+  <meta property="og:image"
+    content="https://res.cloudinary.com/huynhtruong01/image/upload/v1638184924/react_landing_page/lading_page_lekyfj.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://landing-page-home.vercel.app">
+  <meta property="twitter:description" content="Create a project landing page for React beginner, .....">
+  <meta property="twitter:image"
+    content="https://res.cloudinary.com/huynhtruong01/image/upload/v1638184924/react_landing_page/lading_page_lekyfj.png">
 </head>
 
 <body>
